# crpyt

./: .gitignore  README.md  SConstruct  pyproject.toml  requirements.txt  setup.py
src/: cli.py  encryption.py
test/: README.md
test/pets/cats/: neko.txt
