[project]
name = "crpyt_MolassesLover"
version = "0.0.1"
authors = [
  { name="MolassesLover", email="60114762+MolassesLover@users.noreply.github.com" },
]
description = "Encrypt files within a tree using GPG"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/MolassesLover/Crpyt"
"Bug Tracker" = "https://github.com/MolassesLover/Crpyt/issues"